2010-04-16  Sebastien Pouliot  <sebastien@ximian.com>

	* SecurityManager.cs: Add stub for new methods (so code compiles
	correctly under other profiles)
	* SecurityManager_2_1.cs: Implement [Check|Ensure]ElevatedPermissions
	for Moonlight Elevated Trust

2010-03-23  Sebastien Pouliot  <sebastien@ximian.com>

	* SecurityManager_2_1.cs: Add an internal HasElevatedPermissions 
	property to mscorlib since the "real" (i.e. visible) one in 
	System.Windows.dll is not accessible by most code.

2010-03-16  Jb Evain  <jbevain@novell.com>

	* SecurityTransparentAttribute.cs
	* SecurityFrame.cs
	* IPermission.cs
	* SecurityManager.cs
	* SecurityManager_2_1.cs
	* SecuritySafeCriticalAttribute.cs:
		use MOONLIGHT symbol to disambiguate MonoTouch and Moonlight code.

2009-10-30	Marek Safar  <marek.safar@gmail.com>

	* SecurityRuleSet.cs, SecurityRulesAttribute.cs: Implemented.

2009-10-23  Sebastien Pouliot  <sebastien@ximian.com>

	* SecurityManager_2_1.cs: Return to duty for SecurityEnabled, it
	will allow us to distinguish between running in the browser
	(coreclr active) and on the console (e.g. smcs) from managed code

2009-09-23  Sebastien Pouliot  <sebastien@ximian.com>

	* SecurityContext.cs: Remove NET_2_1 defines since the type is
	now unused in NET_2_1 profile

2009-09-22  Sebastien Pouliot  <sebastien@ximian.com>

	* CodeAccessPermission_2_1.cs: New. Stub to compile NET_2_1
	* IPermission.cs: Remove ISecurityEncodable for NET_2_1
	* PermissionSet_2_1.cs: New. Stub to compile NET_2_1
	* SecurityContext.cs: Remove usage of CompressedStack for NET_2_1
	* SecurityException_2_1.cs: New, CAS-less version for NET_2_1
	* SecurityException.cs: Remove NET_2_1 conditions
	* SecurityFrame.cs: Keep structures (needed by the runtime) but
	remove SecurityFrame itself for NET_2_1

2009-09-21  Sebastien Pouliot  <sebastien@ximian.com>

	* SecurityContext.cs: Don't use WindowsIdentity under NET_2_1

2009-09-09  Sebastien Pouliot  <sebastien@ximian.com>
